# eikihost

./: Cargo.toml  cope
src/: main.rs
static/: index.html
templates/: list.html
